testdata/baselines/reference/submodule/conformance/jsDeclarationsReactComponents.errors.txt
jsDeclarationsReactComponents1.jsx(2,19): error TS2307: Cannot find module 'react' or its corresponding type declarations.
jsDeclarationsReactComponents1.jsx(3,23): error TS2307: Cannot find module 'prop-types' or its corresponding type declarations.
jsDeclarationsReactComponents2.jsx(1,19): error TS2307: Cannot find module 'react' or its corresponding type declarations.
jsDeclarationsReactComponents3.jsx(1,19): error TS2307: Cannot find module 'react' or its corresponding type declarations.
jsDeclarationsReactComponents4.jsx(1,19): error TS2307: Cannot find module 'react' or its corresponding type declarations.
jsDeclarationsReactComponents5.jsx(1,19): error TS2307: Cannot find module 'react' or its corresponding type declarations.
jsDeclarationsReactComponents5.jsx(2,23): error TS2307: Cannot find module 'prop-types' or its corresponding type declarations.


==== jsDeclarationsReactComponents1.jsx (2 errors) ====
    /// <reference path="/.lib/react16.d.ts" preserve="true" />
    import React from "react";
                      ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    import PropTypes from "prop-types"
                          ~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'prop-types' or its corresponding type declarations.
    
    const TabbedShowLayout = ({
    }) => {
        return (
            <div />
        );
    };
    
    TabbedShowLayout.propTypes = {
        version: PropTypes.number,
    
    };
    
    TabbedShowLayout.defaultProps = {
        tabs: undefined
    };
    
    export default TabbedShowLayout;
    
==== jsDeclarationsReactComponents2.jsx (1 errors) ====
    import React from "react";
                      ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    /**
     * @type {React.SFC}
     */
    const TabbedShowLayout = () => {
        return (
            <div className="" key="">
                ok
            </div>
        );
    };
    
    TabbedShowLayout.defaultProps = {
        tabs: "default value"
    };
    
    export default TabbedShowLayout;
    
==== jsDeclarationsReactComponents3.jsx (1 errors) ====
    import React from "react";
                      ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    /**
     * @type {{defaultProps: {tabs: string}} & ((props?: {elem: string}) => JSX.Element)}
     */
    const TabbedShowLayout = () => {
        return (
            <div className="" key="">
                ok
            </div>
        );
    };
    
    TabbedShowLayout.defaultProps = {
        tabs: "default value"
    };
    
    export default TabbedShowLayout;
    
==== jsDeclarationsReactComponents4.jsx (1 errors) ====
    import React from "react";
                      ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    const TabbedShowLayout = (/** @type {{className: string}}*/prop) => {
        return (
            <div className={prop.className} key="">
                ok
            </div>
        );
    };
    
    TabbedShowLayout.defaultProps = {
        tabs: "default value"
    };
    
    export default TabbedShowLayout;
==== jsDeclarationsReactComponents5.jsx (2 errors) ====
    import React from 'react';
                      ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    import PropTypes from 'prop-types';
                          ~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'prop-types' or its corresponding type declarations.
    
    function Tree({ allowDropOnRoot }) {
      return <div />
    }
    
    Tree.propTypes = {
        classes: PropTypes.object,
    };
    
    Tree.defaultProps = {
        classes: {},
        parentSource: 'parent_id',
    };
    
    export default Tree;